--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
-    "agora-rtc-sdk-ng": "^4.7.0"
+    "agora-rtc-sdk-ng": "^4.7.0",
+    "deepar-agora-extension": "^1.0.1"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^2.0.0",
@@ -17,7 +18,7 @@
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.13.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.10.0"
   },
   "eslintConfig": {
     "extends": [
